modified test.ipynb added test2.ipynb

--- a/test.ipynb
+++ b/test.ipynb
@@ -100,7 +100,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import clip \n"
+   ]
   }
  ],
  "metadata": {
@@ -119,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3 (default, Jul  2 2020, 16:21:59) \n[GCC 7.3.0]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
