--- a/app/test.ipynb
+++ b/app/test.ipynb
@@ -718,6 +718,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\gits\\SMILE\\app\\lib\n"
+     ]
+    }
+   ],
+   "source": [
+    "from lib.SMILE import SMILE\n",
+    "\n",
+    "filename = \"upload_fig/{}.{}\".format('input', 'png')\n",
+    "\n",
+    "nowfig=SMILE(filename,'output' )\n",
+    "nowfig.find_mouse()\n",
+    "nowfig.set_predictor()\n",
+    "#nowfig.predict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.   , 0.12 ],\n",
+       "        [0.   , 0.308],\n",
+       "        [3.143, 0.308],\n",
+       "        [3.143, 0.188],\n",
+       "        [3.119, 0.188],\n",
+       "        [3.095, 0.18 ],\n",
+       "        [3.   , 0.18 ],\n",
+       "        [2.976, 0.188],\n",
+       "        [2.929, 0.188],\n",
+       "        [2.929, 0.195],\n",
+       "        [2.905, 0.203],\n",
+       "        [2.905, 0.211],\n",
+       "        [2.881, 0.218],\n",
+       "        [2.881, 0.226],\n",
+       "        [2.857, 0.233],\n",
+       "        [2.738, 0.233],\n",
+       "        [2.714, 0.226],\n",
+       "        [2.381, 0.226],\n",
+       "        [2.357, 0.233],\n",
+       "        [2.167, 0.233],\n",
+       "        [2.143, 0.226],\n",
+       "        [1.905, 0.226],\n",
+       "        [1.881, 0.218],\n",
+       "        [1.81 , 0.218],\n",
+       "        [1.786, 0.226],\n",
+       "        [1.5  , 0.226],\n",
+       "        [1.476, 0.218],\n",
+       "        [1.452, 0.218],\n",
+       "        [1.429, 0.226],\n",
+       "        [1.095, 0.226],\n",
+       "        [1.071, 0.218],\n",
+       "        [1.048, 0.218],\n",
+       "        [1.024, 0.211],\n",
+       "        [0.69 , 0.211],\n",
+       "        [0.667, 0.203],\n",
+       "        [0.476, 0.203],\n",
+       "        [0.452, 0.195],\n",
+       "        [0.405, 0.195],\n",
+       "        [0.381, 0.188],\n",
+       "        [0.357, 0.188],\n",
+       "        [0.31 , 0.173],\n",
+       "        [0.286, 0.173],\n",
+       "        [0.238, 0.158],\n",
+       "        [0.214, 0.158],\n",
+       "        [0.143, 0.135],\n",
+       "        [0.119, 0.135],\n",
+       "        [0.095, 0.128],\n",
+       "        [0.071, 0.128],\n",
+       "        [0.048, 0.12 ]]),\n",
+       " '0.994')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SMILE.predict(0.2,0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'xpol': '0.0,0.0,3.143,3.143,3.119,3.095,3.0,2.976,2.952,2.905,2.905,2.881,2.881,2.857,2.738,2.714,2.381,2.357,2.214,2.19,1.881,1.857,1.833,1.81,1.476,1.452,1.429,1.095,1.071,1.048,1.024,0.69,0.667,0.476,0.452,0.405,0.381,0.357,0.31,0.286,0.238,0.214,0.143,0.119,0.095',\n",
+       " 'ypol': '0.128,0.308,0.308,0.188,0.188,0.18,0.18,0.188,0.188,0.203,0.211,0.218,0.226,0.233,0.233,0.226,0.226,0.233,0.233,0.226,0.226,0.218,0.218,0.226,0.226,0.218,0.226,0.226,0.218,0.218,0.211,0.211,0.203,0.203,0.195,0.195,0.188,0.188,0.173,0.173,0.158,0.158,0.135,0.135,0.128',\n",
+       " 'sc': '0.971',\n",
+       " 'msg': 'success'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pol,sc=SMILE.predict(0.2,0.3)\n",
+    "xpol=','.join([str(i) for i in pol[:,0]])\n",
+    "ypol=','.join([str(i) for i in pol[:,1]])\n",
+    "a={'xpol':xpol, 'ypol':ypol,'sc':sc, 'msg':'success'}\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 0.128],\n",
+       " [0.0, 0.308],\n",
+       " [3.143, 0.308],\n",
+       " [3.143, 0.188],\n",
+       " [3.119, 0.188],\n",
+       " [3.095, 0.18],\n",
+       " [3.0, 0.18],\n",
+       " [2.976, 0.188],\n",
+       " [2.952, 0.188],\n",
+       " [2.905, 0.203],\n",
+       " [2.905, 0.211],\n",
+       " [2.881, 0.218],\n",
+       " [2.881, 0.226],\n",
+       " [2.857, 0.233],\n",
+       " [2.738, 0.233],\n",
+       " [2.714, 0.226],\n",
+       " [2.381, 0.226],\n",
+       " [2.357, 0.233],\n",
+       " [2.214, 0.233],\n",
+       " [2.19, 0.226],\n",
+       " [1.881, 0.226],\n",
+       " [1.857, 0.218],\n",
+       " [1.833, 0.218],\n",
+       " [1.81, 0.226],\n",
+       " [1.476, 0.226],\n",
+       " [1.452, 0.218],\n",
+       " [1.429, 0.226],\n",
+       " [1.095, 0.226],\n",
+       " [1.071, 0.218],\n",
+       " [1.048, 0.218],\n",
+       " [1.024, 0.211],\n",
+       " [0.69, 0.211],\n",
+       " [0.667, 0.203],\n",
+       " [0.476, 0.203],\n",
+       " [0.452, 0.195],\n",
+       " [0.405, 0.195],\n",
+       " [0.381, 0.188],\n",
+       " [0.357, 0.188],\n",
+       " [0.31, 0.173],\n",
+       " [0.286, 0.173],\n",
+       " [0.238, 0.158],\n",
+       " [0.214, 0.158],\n",
+       " [0.143, 0.135],\n",
+       " [0.119, 0.135],\n",
+       " [0.095, 0.128]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pol[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -740,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
