modified Train.ipynb and test2.ipynb in app

--- a/app/Train.ipynb
+++ b/app/Train.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, isdir, join\n",
-    "path='TrainData/data/'\n",
+    "path='TrainData//'\n",
     "output_path=\"TrainData/mask/\"\n",
     "files = listdir(path)\n",
     "\n",
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
