modified Train.ipynb in app

--- a/app/Train.ipynb
+++ b/app/Train.ipynb
@@ -9,9 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./TrainData/labeled/0059.png',\n",
+       " './TrainData/labeled/0065.png',\n",
+       " './TrainData/labeled/0071.png',\n",
+       " './TrainData/labeled/0267.png',\n",
+       " './TrainData/labeled/0273.png',\n",
+       " './TrainData/labeled/0298.png']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, isdir, join\n",
@@ -34,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
