modified BuildTraindata.ipynb and README.md in .

--- a/BuildTraindata.ipynb
+++ b/BuildTraindata.ipynb
@@ -40,8 +40,8 @@
     "import io\n",
     "import cv2\n",
     "\n",
-    "path='TrainData/data/'\n",
-    "output_path=\"TrainData/mask/\"\n",
+    "path='app/TrainData/data/'\n",
+    "output_path=\"app/TrainData/mask/\"\n",
     "files = listdir(path)\n",
     "\n",
     "all_path=[]\n",
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "from lib.SMILE import SMILE\n",
+    "from app.lib.SMILE import SMILE\n",
     "import numpy as np\n",
     "import json\n",
     "from tqdm import tqdm, trange\n",
