--- a/test.ipynb
+++ b/test.ipynb
@@ -6,118 +6,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# import tensorflow as tf\n",
-    "# from tensorflow import keras\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import cv2\n",
-    "from imgaug import augmenters as iaa\n",
+    "from app.lib.Polygon import Polygon\n",
+    "import json\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "# import pydicom\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import collections\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
-    "from datetime import datetime\n",
-    "import math\n",
     "import cv2\n",
-    "import tensorflow as tf\n",
-    "import tensorflow.keras as keras\n",
+    "import os\n",
     "import sys\n",
-    "from tensorflow.keras.applications.inception_v3 import InceptionV3, preprocess_input\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold, KFold\n",
-    "from sklearn.utils import class_weight, shuffle\n",
-    "import albumentations as album\n",
-    "# from one_cycle_lr_tf2 import OneCycleScheduler\n",
-    "# from model_tf2 import create_model\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.python.keras.utils.data_utils import Sequence\n",
-    "# from my_generator_tf2 import MyGenerator\n",
-    "from tensorflow.keras.losses import binary_crossentropy\n",
-    "import random\n",
-    "from tensorflow.keras.callbacks import (ModelCheckpoint, LearningRateScheduler,\n",
-    "                             EarlyStopping, ReduceLROnPlateau,CSVLogger,Callback,LambdaCallback,TensorBoard)\n",
-    "from tensorflow.keras import backend as K\n",
-    "import tempfile\n",
-    "from tensorflow.keras.models import Sequential, load_model, Model\n",
-    "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.layers import (Activation, Dropout, Flatten, Dense, GlobalMaxPooling2D,\n",
-    "                          BatchNormalization, Input, Conv2D, Multiply, Lambda,\n",
-    "                          Concatenate, GlobalAveragePooling2D, Softmax)\n",
-    "from tensorflow.keras import metrics\n",
-    "# import pydicom\n",
-    "import glob\n",
-    "from scipy import ndimage\n",
-    "from skimage import exposure\n",
+    "import io\n",
+    "from pathlib import Path\n",
+    "import random as rd\n",
     "\n",
-    "from tensorflow.keras.utils import to_categorical, plot_model\n",
+    "if sys.version_info[0] >= 3:\n",
+    "    unicode = str\n",
+    "# __author__ = 'hcaesar'\n",
     "\n",
-    "# from sklearn.metrics import f1_score, recall_score, precision_score\n",
+    "# 实例的id，每个图像有多个物体每个物体的唯一id\n",
+    "segmentation_id = 0\n",
+    "Dir_path='./app/TrainData/labeled/' \n",
     "\n",
-    "# import tensorflow_addons as tfa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def aug_image_label(image, label):\n",
-    "    # input image: (h,w,c) uint8\n",
-    "    # input label: (h,w,c) uint8\n",
-    "    seed_list = [random.randrange(2**32 - 1) for i in range(10)]\n",
+    "# 原图像的路径， 原图像和mask图像的名称是一致的。\n",
+    "path = Dir_path+'image/'\n",
+    "rgb_image_files = os.listdir(path)\n",
+    "# mask路径\n",
+    "block_mask_path = Dir_path+'mask/'\n",
+    "block_mask_files = os.listdir(block_mask_path)\n",
     "\n",
-    "    # augmentation pipeline for images\n",
-    "    aug_images = iaa.Sequential([\n",
-    "        iaa.Fliplr(p=0.5, random_state=seed_list[0]), \n",
-    "        iaa.Flipud(p=0.5, random_state=seed_list[1]), \n",
-    "        iaa.WithBrightnessChannels(iaa.Add((-50, 50)), random_state=seed_list[2]), \n",
-    "        iaa.MultiplySaturation((0.5, 1.5), random_state=seed_list[3]), \n",
-    "        # iaa.BlendAlpha((0.0, 0.1), iaa.contrast.AllChannelsHistogramEqualization(), random_state=seed_list[4]),\n",
-    "        # iaa.Affine(scale=(0.9, 1.1), rotate=(-15, 15), random_state=seed_list[3], cval=255),\n",
-    "        # iaa.PiecewiseAffine(scale=(0.01, 0.05), random_state=seed_list[4], cval=255), \n",
-    "    ], random_state=seed_list[-1])\n",
+    "# coco json保存的位置\n",
+    "jsonPath_t = Dir_path+\"train.json\"\n",
+    "jsonPath_v = Dir_path+\"test.json\"\n",
     "\n",
-    "    # augmentation pipeline for segmentation maps - with coarse dropout, but without color aug\n",
-    "    aug_segmaps = iaa.Sequential([\n",
-    "        iaa.Fliplr(p=0.5, random_state=seed_list[0]), \n",
-    "        iaa.Flipud(p=0.5, random_state=seed_list[1]), \n",
-    "        # iaa.Affine(scale=(0.9, 1.1), rotate=(-15, 15), random_state=seed_list[2]),\n",
-    "        # iaa.PiecewiseAffine(scale=(0.01, 0.05), random_state=seed_list[4]), \n",
-    "    ], random_state=seed_list[-1])\n",
-    "    \n",
-    "    image_aug = aug_images(image=image)  # First, augment image.\n",
-    "    segmap_aug = aug_segmaps(image=label)  # Second, augment segmentation map.\n",
-    "    return image_aug, segmap_aug"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize(image):\n",
-    "    image = image / 255  # value[0.0-1.0]\n",
-    "    return image.astype('float32')\n",
+    "with io.open(Dir_path+'cate.json') as f:\n",
+    "    a=json.load(f)\n",
+    "    cate={a[i]:i for i in range(len(a))}\n",
     "\n",
-    "# function test\n",
-    "# norm_image = normalize(image)\n",
-    "# print(\"image min =\", norm_image.min())\n",
-    "# print(\"image max =\", norm_image.max())\n",
-    "def resize(image, scale=None, desired_size=(128,128)):\n",
-    "    # Compute resize factors\n",
-    "    if scale:\n",
-    "        factor_0 = scale\n",
-    "        factor_1 = scale\n",
-    "    else:\n",
-    "        factor_0 = 1 / (image.shape[0] / desired_size[1])\n",
-    "        factor_1 = 1 / (image.shape[1] / desired_size[0])\n",
-    "    # Resize\n",
-    "    image = ndimage.zoom(image.astype('float32'), (factor_0, factor_1, 1), order=1, output='float32')\n",
-    "    return image.astype('float16')"
+    "\n",
+    "# annotations部分的实现\n",
+    "def polyToanno(polygon_mask,category_id, image_id):\n",
+    "    annotations = [] #一幅图片所有的annotatons\n",
+    "    global segmentation_id\n",
+    "    # print(ann_count)\n",
+    "    # 对每个实例进行处理\n",
+    "    for i in range(len(polygon_mask)):\n",
+    "        if category_id[i]==-1:\n",
+    "            continue\n",
+    "        \n",
+    "        polygon=Polygon(polygon_mask[i])\n",
+    "        \n",
+    "        annotation = {\n",
+    "            \"segmentation\": [],\n",
+    "            \"area\": abs(polygon.area),\n",
+    "            \"iscrowd\": 0,\n",
+    "            \"image_id\": image_id,\n",
+    "            \"bbox\": polygon.bbox,\n",
+    "            \"category_id\": category_id[i],\n",
+    "            \"id\": segmentation_id\n",
+    "        }\n",
+    "        # print(contour)\n",
+    "        # 求segmentation部分\n",
+    "        segmentation = polygon.points.ravel().tolist()\n",
+    "        if len(segmentation)<=4:\n",
+    "            continue\n",
+    "        annotation[\"segmentation\"].append(segmentation)\n",
+    "        annotations.append(annotation)\n",
+    "        segmentation_id = segmentation_id + 1\n",
+    "    return annotations\n",
+    "\n",
+    "class NumpyEncoder(json.JSONEncoder):\n",
+    "    \"\"\" Custom encoder for numpy data types \"\"\"\n",
+    "    def default(self, obj):\n",
+    "        if isinstance(obj, (np.int_, np.intc, np.intp, np.int8,\n",
+    "                            np.int16, np.int32, np.int64, np.uint8,\n",
+    "                            np.uint16, np.uint32, np.uint64)):\n",
+    "\n",
+    "            return int(obj)\n",
+    "\n",
+    "        elif isinstance(obj, (np.float_, np.float16, np.float32, np.float64)):\n",
+    "            return float(obj)\n",
+    "\n",
+    "        elif isinstance(obj, (np.complex_, np.complex64, np.complex128)):\n",
+    "            return {'real': obj.real, 'imag': obj.imag}\n",
+    "\n",
+    "        elif isinstance(obj, (np.ndarray,)):\n",
+    "            return obj.tolist()\n",
+    "\n",
+    "        elif isinstance(obj, (np.bool_)):\n",
+    "            return bool(obj)\n",
+    "\n",
+    "        elif isinstance(obj, (np.void)): \n",
+    "            return None\n",
+    "\n",
+    "        return json.JSONEncoder.default(self, obj)\n",
+    "\n"
    ]
   },
   {
@@ -126,52 +105,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_preprocessing(sample_id):\n",
-    "    def py_preproc(sample_id):  # input tensor\n",
-    "        # read\n",
-    "        # image = get_image(sample_id)\n",
-    "        # label = get_label(sample_id)\n",
-    "        image = train_arr[sample_id]\n",
-    "        label = label_arr[sample_id]\n",
-    "        # augmentation\n",
-    "        image, label = aug_image_label(image, label)\n",
-    "        # # bilateralFilter\n",
-    "        # image = cv2.bilateralFilter(image, d=d, sigmaColor=sigmaColor, sigmaSpace=sigmaSpace)\n",
-    "        # normalize\n",
-    "        image = normalize(image)\n",
-    "        # resize\n",
-    "        image = resize(image, desired_size=(128,128))\n",
-    "        label = resize(label, desired_size=(128,128))   \n",
-    "        # #RGB2GRAY\n",
-    "        # image = np.mean(image, axis=2)\n",
-    "        # image = np.expand_dims(image, axis=-1)\n",
+    "def build(jsonPath,arr):\n",
+    "    annCount = 0\n",
+    "    imageCount = 0\n",
     "\n",
-    "        return image, label\n",
-    "    \n",
-    "    image, label = tf.py_function(py_preproc, [sample_id], [tf.float16, tf.float16])\n",
-    "    return image, label  # tensor output\n",
-    "def valid_preprocessing(sample_id):\n",
-    "    def py_preproc(sample_id):  # input tensor\n",
-    "        # read\n",
-    "        # image = get_image(sample_id)\n",
-    "        # label = get_label(sample_id)\n",
-    "        image = train_arr[sample_id]\n",
-    "        label = label_arr[sample_id]\n",
-    "        # # bilateralFilter\n",
-    "        # image = cv2.bilateralFilter(image, d=d, sigmaColor=sigmaColor, sigmaSpace=sigmaSpace)\n",
-    "        # normalize\n",
-    "        image = normalize(image)\n",
-    "        # resize\n",
-    "        image = resize(image, desired_size=(128,128))\n",
-    "        label = resize(label, desired_size=(128,128)) \n",
-    "        # #RGB2GRAY\n",
-    "        # image = np.mean(image, axis=2)\n",
-    "        # image = np.expand_dims(image, axis =-1)\n",
+    "    file_dict={}\n",
     "\n",
-    "        return image, label\n",
+    "    with io.open(jsonPath, 'w', encoding='utf8') as output:\n",
+    "        # 那就全部写在一个文件夹好了\n",
+    "        # 先写images的信息\n",
+    "        output.write(unicode('{\\n'))\n",
+    "        output.write(unicode('\"images\": [\\n'))\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        for image in arr:\n",
+    "            file_dict[image.split('.')[0]]=imageCount\n",
+    "            \n",
+    "            pic=cv2.imread(path+image)\n",
+    "            h,w,d=pic.shape\n",
+    "\n",
+    "            output.write(unicode('{'))\n",
+    "            annotation = {\n",
+    "                \"height\": h,\n",
+    "                \"width\": w,\n",
+    "                \"id\": imageCount,\n",
+    "                \"file_name\": image\n",
+    "            }\n",
+    "\n",
+    "            str_ = json.dumps(annotation, indent=4)\n",
+    "            str_ = str_[1:-1]\n",
+    "            if len(str_) > 0:\n",
+    "                output.write(unicode(str_))\n",
+    "                imageCount = imageCount + 1\n",
+    "            if (image == arr[-1]):\n",
+    "                output.write(unicode('}\\n'))\n",
+    "            else:\n",
+    "                output.write(unicode('},\\n'))\n",
+    "        output.write(unicode('],\\n'))\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        ################ 写cate ###############\n",
+    "        output.write(unicode('\"categories\": [\\n'))\n",
+    "\n",
+    "        for c in cate:\n",
+    "            output.write(unicode('{\\n'))\n",
+    "            categories = {\n",
+    "                \"supercategory\": c,\n",
+    "                \"id\": cate[c],\n",
+    "                \"name\": c\n",
+    "            }\n",
+    "            str_ = json.dumps(categories, indent=4)\n",
+    "            str_ = str_[1:-1]\n",
+    "            if len(str_) > 0:\n",
+    "                output.write(unicode(str_))\n",
+    "            if c==list(cate)[-1]:\n",
+    "                output.write(unicode('}\\n'))\n",
+    "            else:\n",
+    "                output.write(unicode('},\\n'))\n",
+    "\n",
+    "        output.write(unicode('],\\n'))\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        ############### 写annotations ###############\n",
+    "        output.write(unicode('\"annotations\": [\\n'))\n",
+    "        for i in range(len(arr)):       \n",
+    "            \n",
+    "            with open(os.path.join(block_mask_path, f\"{arr[i].split('.')[0]}.json\")) as f:\n",
+    "                data=json.load(f)\n",
+    "            \n",
+    "            #label 轉換\n",
+    "            labels=[]\n",
+    "            for label in data['label']:\n",
+    "                try:\n",
+    "                    labels.append(cate[label])\n",
+    "                except:\n",
+    "                    labels.append(-1)\n",
+    "\n",
+    "\n",
+    "            #annotations\n",
+    "            block_anno = polyToanno(data['mask'],labels, file_dict[arr[i].split('.')[0]])\n",
+    "            \n",
+    "            \n",
+    "            for b in block_anno:\n",
+    "                #print (b)\n",
+    "                str_block = json.dumps(b, indent=4,cls=NumpyEncoder)\n",
+    "                str_block = str_block[1:-1]\n",
+    "                if len(str_block) > 0:\n",
+    "                    output.write(unicode('{\\n'))\n",
+    "                    output.write(unicode(str_block))\n",
+    "                    if ( b == block_anno[-1] and i==len(arr)-1):\n",
+    "                        output.write(unicode('}\\n'))\n",
+    "                    else:\n",
+    "                        output.write(unicode('},\\n'))\n",
+    "            annCount = annCount + 1\n",
+    "        output.write(unicode(']\\n'))\n",
+    "        output.write(unicode('}\\n'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def BuildCoCoDataset(k):\n",
     "    \n",
-    "    image, label = tf.py_function(py_preproc, [sample_id], [tf.float16, tf.float16])\n",
-    "    return image, label  # tensor output"
+    "\n",
+    "    \n",
+    "    rd.shuffle(rgb_image_files)\n",
+    "\n",
+    "    idx=int(len(rgb_image_files)*k)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    print(f'build({jsonPath_t},{rgb_image_files[:idx]})')\n",
+    "    build(jsonPath_t,rgb_image_files[:idx])\n",
+    "    build(jsonPath_v,rgb_image_files[idx:])\n"
    ]
   }
  ],
